src/intros/features/index.scss
@import "../../styles/color";
@import "../../styles/general";

#welcome {
  .features {
    margin-top: 50px;

    h1 {
      color: map_get($colors, "grey-stone");
      text-align: center;
    }

    .feature {
      display: inline-block;
      width: 50%;
      margin-top: 20px;
      margin-bottom: 30px;
      text-align: center;
      vertical-align: top;

      .card {
        margin: auto;
        width: 80%;
        height: 300px;
        min-width: 320px;
        -webkit-transition: transform .15s ease-out, padding-top .15s ease-out;
        -moz-transition: transform .15s ease-out, padding-top .15s ease-out;
        -ms-transition: transform .15s ease-out, padding-top .15s ease-out;
        -o-transition: transform .15s ease-out, padding-top .15s ease-out;
        transition: transform .15s ease-out, padding-top .15s ease-out;
        -webkit-box-shadow: 0 18px 20px rgba(50,50,93,.1),0 8px 15px rgba(0,0,0,.07);
        -moz-box-shadow: 0 18px 20px rgba(50,50,93,.1),0 8px 15px rgba(0,0,0,.07);
        box-shadow: 0 18px 20px rgba(50,50,93,.1),0 8px 15px rgba(0,0,0,.07);

        &:hover {
          transform: translateY(-5px);
        }

        h3 {
          margin: 20px 0 10px 0;
          line-height: 25px;
          padding: 0;
          font-weight: 700;
          font-size: 1rem;
          color: map_get($colors, "grey-stone");
        }

        p {
          color: map_get($colors, "grey-storm");
        }

        .illustrate {
          width: 320px;
          height: 240px;
          margin: auto;
          background-size: 320px 240px;
          border-radius: 3px;
          opacity: 0.9;
        }
      }
    }
  }

  @media screen and (max-width: 750px) {
    .features {
      .feature {
        width: 100%;

        .card {
          width: 430px;

          h3 {
            font-size: 1rem;
          }
        }
      }
    }
  }
}

